# solrival

./: .env.example  .gitignore  README.md  battlelog-player1.json  battlelog-player2.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  solrival-active-duel-timeout.patch  solrival-admin-redesign.patch  solrival-admin-tables-polish.patch  solrival-admin-tweaks_1.patch  solrival-auth-footer.patch  solrival-auth-gate-fix.patch  solrival-card-padding-fix.patch  solrival-deadcode-cleanup.patch  solrival-deposit-retry.patch  solrival-dispute-flow.patch  solrival-disputes-notifs-admin-fixes.patch  solrival-duel-detail.patch  solrival-fixes-step2.patch  solrival-foundation.patch  solrival-home-hero.patch  solrival-lazy-env.patch  solrival-lazy-expiry-smoke.patch  solrival-leaderboard.patch  solrival-my-duels.patch  solrival-notification-persistence.patch  solrival-notifications-and-disputes.patch  solrival-notifications.patch  solrival-phase1-type-scale.patch  solrival-phase2-primitives.patch  solrival-phase3-admin-tokens.patch  solrival-phase4a-marketplace.patch  solrival-phase6-nav-a11y.patch  solrival-phase6b-a11y-polish.patch  solrival-profile.patch  solrival-refund-expired-disabled.patch  solrival-security-hardening.patch  solrival-settings.patch  (+10 more)
programs/solrival-escrow/programs/solrival-escrow/: Cargo.toml
programs/solrival-escrow/programs/solrival-escrow/src/: constants.rs  errors.rs  events.rs  lib.rs  util.rs
programs/solrival-escrow/programs/solrival-escrow/src/instructions/: create_duel_escrow.rs  deposit_stake.rs  finalize_payout.rs  flag_dispute.rs  mod.rs  (+2 more)
(+253 files in other folders)
