[package]
name = "solrival-escrow"
version = "0.1.0"
description = "SolRival per-duel SOL escrow with constrained settlement authority"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solrival_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
